--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "faker": "^6.6.6",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.2",
+    "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
