--- a/Customer-Frontend/package.json
+++ b/Customer-Frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "multer": "^2.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
